# Alusus

Doc/Outdated/: specifications.ar.html
Sources/: CMakeLists.txt
Sources/AlususOSAL/: AlususOSAL.cpp  AlususOSAL.hpp  CMakeLists.txt
Sources/AlususOSCommon/: AlususOSCommon.cpp  AlususOSCommon.hpp  CMakeLists.txt
Sources/Core/: CMakeLists.txt  core_global_storage.cpp  start.cpp
Sources/Core/Basic/: Logger.cpp  Logger.h  SbStr.cpp  SbStr.h  SbU32Str.cpp  SbU32Str.h  Str.cpp  Str.h  TiStr.h  TiU32Str.h  U32Str.cpp  U32Str.h  basic.cpp  basic.h
Sources/Core/Data/: Token.h
Sources/Core/Data/Ast/: ast.cpp
Sources/Core/Data/Grammar/: ConstTerm.h  LexerModule.h  RandomCharGroupUnit.h  SequenceCharGroupUnit.h  StandardFactory.cpp  grammar.cpp  grammar.h
Sources/Core/Main/: LibraryManager.cpp  LibraryManager.h  RootManager.cpp  RootManager.h  main.cpp  main.h
Sources/Core/Notices/: L18nDictionary.cpp  L18nDictionary.h  notices.cpp
Sources/Core/Processing/: Engine.cpp  InputBuffer.cpp  InputBuffer.h  InteractiveCharInStream.h  Lexer.cpp  Lexer.h  Parser.cpp  TokenizingHandler.h  processing.cpp  processing.h
Sources/Core/Processing/Handlers/: ConstTokenizingHandler.h  DumpAstParsingHandler.cpp  IdentifierTokenizingHandler.cpp  IdentifierTokenizingHandler.h  StringLiteralTokenizingHandler.cpp  StringLiteralTokenizingHandler.h
Sources/OSAL/: CMakeLists.txt
Sources/OSAL/Common/: OSAL.cpp
Sources/OSAL/Include/: OSAL.hpp
Sources/OSAL/Unix/: OSAL.cpp
Sources/OSAL/Unix/Apple/: OSAL.cpp
Sources/OSAL/Unix/Linux/: OSAL.cpp
Sources/OSAL/Win32/: OSAL.cpp
Sources/Spp/: BuildManager.cpp  CMakeLists.txt  LibraryGateway.cpp  linker_version_script.map
Sources/Spp/Handlers/: TypeHandlersParsingHandler.cpp
Sources/Spp/LlvmCodeGen/: JitBuildTarget.cpp  LazyJitBuildTarget.cpp  OfflineBuildTarget.cpp  TargetGenerator.cpp  llvm_code_gen.cpp  llvm_dependencies.h
Sources/Spp/Notices/: MultipleCalleeMatchNotice.cpp
Sources/Spp/Rt/: AstMgr.cpp
Sources/Srt/Srl/: CMakeLists.txt  U32String.alusus  linker_version_script.map  macos_exported_symbols.txt  srl.h  strs.cpp  strs.h
Sources/Srt/مـتم/: نـص_يونيكود_32_بت.أسس
Sources/Tests/: CMakeLists.txt  main.cpp
Tools/: Build.ps1  build.cmd
Tools/BuildSrc/: build.py  build_packages.py  common.py  generate_defs_header.py  target_triplet.py  vcpkg.py
Tools/vcpkg/Manifest/: vcpkg.json
Tools/vcpkg/PortsOverlay/apr/: portfile.cmake
Tools/vcpkg/TripletsOverlay/: arm-mingw-static-release.cmake  arm-windows-static-release.cmake  arm64-mingw-static-release.cmake  x64-mingw-static-release.cmake  x86-mingw-static-release.cmake
